--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,10 @@
               <p class="score-txt">-</p>
           </button>
         </form>
+
+        <h3 id="wins">Team Wins: 0</h3>
       </div>
+
 
       <!-- Team 2 -->
       <div id="team-2-container" class="team-box">
@@ -60,8 +63,11 @@
               <p class="score-txt">-</p>
             </button>
           </form>
-        </div>
+          <h3 id="wins">Team Wins: 0</h3>
+        </div>       
     </div>
+
+    
 
     <form>
         <button id="reset-score" type="button" onclick="resetGame()" >Reset</button>
